dataset1235/2025-2/610742602/users/2183191739/executions/2563853024_3198308593.log
== RUN (2025-09-02 20:32:32)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:13)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:31:48)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: ") 
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:40)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o raio da esfera: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o raio da esfera: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o raio da esfera: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o raio da esfera: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o raio da esfera: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o raio da esfera: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:00)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: ") 
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("digite o raio da esfera: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:33)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:33)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:40)
-- CODE: 
from math import *
raio = float(input("digite o raio da esfera: "))
volume = 4 / 3 * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o raio da esfera: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o raio da esfera: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o raio da esfera: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o raio da esfera: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o raio da esfera: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o raio da esfera: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
